# inkplate-experiments

./: .gitignore
baduk/arduino/: .StateManager.cpp.swp  .StateManager.h.swp  DisplayManager.cpp  DisplayManager.h  StateManager.cpp  StateManager.h  arduino.ino  config.h  games_data.h  games_metadata.h
baduk/ogs-fetch/: Cargo.toml  test_sgf.rs
baduk/ogs-fetch/src/: compression.rs  lib.rs  main.rs  test_game_10956290.sgf  test_game_9034489.sgf
dashboard/: BadukGame.cpp  BadukGame.h  DashboardNetwork.cpp  DashboardNetwork.h  DisplayManager.cpp  DisplayManager.h  GameOfLife.cpp  GameOfLife.h  Network.cpp  Network.h  StateManager.cpp  StateManager.h  config.h.example  dashboard.ino  games_data.h  games_data_9x9.h  games_metadata_9x9.h
poetrybox/: calendar_2026.ics  events_data.h  poetrybox.ino
poetrybox/poem-generator/: Cargo.toml
poetrybox/poem-generator/src/: events.rs  main.rs
