[package]
name = "ogs-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "3", features = ["json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sgf-parse = "4"
goban = "0.20.1"
