[package]
name = "poem-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-poems"
path = "src/main.rs"

[[bin]]
name = "generate-events"
path = "src/events.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ical = "0.11"
html-escape = "0.2"
chrono = "0.4"
epub = "2.1.5"
textwrap = "0.16"
scraper = "0.20"
duct = "1.1.1"
